# PetAddr

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.toml  run.sh  test_pet_generation.rs
.claude/: settings.local.json
data/pet_addresses.db/: db
src/: lib.rs  main.rs
src/config/: mod.rs
src/handlers/: health.rs  mod.rs  pet.rs  time.rs
src/middleware/: cors.rs  logging.rs  mod.rs  rate_limit.rs
src/models/: mod.rs  pet.rs  response.rs  time.rs
src/pet/: address.rs  generator.rs  mod.rs  storage.rs
src/routes/: mod.rs
src/utils/: env.rs  mod.rs  validation.rs
