[package]
name = "PetAddr"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"
dotenvy = "0.15"
anyhow = "1.0"
sled = "0.34"
solana-sdk = "2.1"
bs58 = "0.5"
rand = "0.8"
dashmap = "6.1"
